--- a/apps/mobile/public/index.html
+++ b/apps/mobile/public/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Adding the manifest -->
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>%WEB_TITLE%</title>
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="AFK is a Decentralized social graph of Bitcoin, Ethereum built with Nostr and powered by Starknet account abstraction."
+    />
+    <title>AFK Aligned Fam Kernel</title>
     <!-- The `react-native-web` recommended style reset: https://necolas.github.io/react-native-web/docs/setup/#root-element -->
     <style id="expo-reset">
       /* These styles make the body full-height */
@@ -25,20 +29,6 @@
         flex: 1;
       }
     </style>
-    <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker
-        .register('/sw.js')
-        .then(registration => {
-          console.log('Service Worker registered with scope:', registration.scope);
-        })
-        .catch(error => {
-          console.error('Service Worker registration failed:', error);
-        });
-    });
-  }
-</script>
   </head>
 
   <body>
