adding home page

--- a/apps/mobile/public/index.html
+++ b/apps/mobile/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/logo192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>AFK Aligned Fam Kernel</title>
     <!-- The `react-native-web` recommended style reset: https://necolas.github.io/react-native-web/docs/setup/#root-element -->
