--- a/apps/mobile/public/index.html
+++ b/apps/mobile/public/index.html
@@ -33,6 +33,8 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <!-- The root element for your Expo app. -->
-    <div id="root"></div>
+     <main>
+      <div id="root"></div>
+    </main>
   </body>
 </html>
