add metadata index.html

--- a/apps/mobile/public/index.html
+++ b/apps/mobile/public/index.html
@@ -31,6 +31,29 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="%WEB_TITLE%" />
+    <meta name="description" content="AFK Community - A Web3 Gaming Community Platform" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://afk-community.xyz/" />
+    <meta property="og:title" content="%WEB_TITLE%" />
+    <meta property="og:description" content="AFK Community - A Web3 Social and Community Platform for Cypherpunk and Degenz" />
+    <meta property="og:image" content="/icon.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://afk-community.xyz/" />
+    <meta property="twitter:title" content="%WEB_TITLE%" />
+    <meta property="twitter:description" content="AFK Community - A Web3 Social and Community Platform" />
+    <meta property="twitter:image" content="/icon.png" />
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
   </body>
