--- a/apps/mobile/public/index.html
+++ b/apps/mobile/public/index.html
@@ -39,14 +39,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://afk-community.xyz/" />
     <meta property="og:title" content="%WEB_TITLE%" />
-    <meta property="og:description" content="AFK Community - A Web3 Social and Community Platform for Cypherpunk and Degenz" />
+    <meta property="og:description" content="AFK Community - A Web3 Social and Community Platform for Cypherpunk and Degenz Aligned" />
     <meta property="og:image" content="/icon.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://afk-community.xyz/" />
+    <meta property="twitter:url" content="https://x.com/AFK_AlignedFamK/" />
     <meta property="twitter:title" content="%WEB_TITLE%" />
-    <meta property="twitter:description" content="AFK Community - A Web3 Social and Community Platform" />
+    <meta property="twitter:description" content="AFK Community - A Web3 Social and Community Platform to Align with the Cypherpunk and Degenz" />
     <meta property="twitter:image" content="/icon.png" />
 
     <!-- Favicon -->
