--- a/apps/data-backend/src/services/livestream/test-live-hls-streaming.html
+++ b/apps/data-backend/src/services/livestream/test-live-hls-streaming.html
@@ -210,7 +210,10 @@
     <div class="header">
         <div class="stream-info">
             <div class="stream-id">Live HLS Stream Test</div>
-            <div class="manifest-url" id="manifestUrl">http://localhost:5050/livestream/d0c914f7d474fd3f3cdbb1b50ef434bd/stream.m3u8</div>
+
+            
+            <!-- <div class="manifest-url" id="manifestUrl">http://localhost:5050/livestream/d0c914f7d474fd3f3cdbb1b50ef434bd/stream.m3u8</div> -->
+            <div class="manifest-url" id="manifestUrl">http://localhost:5050/livestream/3cae611eb0efaf3a03791b20d5a51a54/stream.m3u8</div>
         </div>
         <div class="controls">
             <button onclick="startLiveTest()" id="startBtn">🚀 Start Live Test</button>
